<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    android:background="@drawable/bg_edit_text"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/info"
        android:text="@string/give_name"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="15sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/fileName"
        android:hint="@string/hint"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_edit_text"
        android:layout_marginTop="20sp"
        app:layout_constraintTop_toBottomOf="@id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/cancel"
        app:layout_constraintEnd_toStartOf="@id/ok"
        android:text="@string/cancel"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/fileName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/ok"
        app:layout_constraintStart_toEndOf="@id/cancel"
        android:text="@string/ok"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/fileName"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>