<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <WebView
        android:visibility="gone"
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/savePage"
        android:paddingHorizontal="5dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_save"
        android:background="@drawable/bg_button"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/savedPages"
        android:paddingHorizontal="5dp"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_saved"
        android:background="@drawable/bg_button"
        android:text="@string/saved_pages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorPage"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icOffline"
            android:src="@drawable/ic_offline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_width="300dp"
            android:layout_height="300dp"/>
        <TextView
            android:id="@+id/errorText"
            app:layout_constraintTop_toBottomOf="@id/icOffline"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/retry"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/errorText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/retry"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:background="@drawable/bg_button"
            android:paddingHorizontal="20dp"
            android:paddingVertical="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loadingBar"
        android:indeterminateTint="@color/black"
        android:layout_margin="150dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>